Added external library for external services

--- a/MyPlaylistMvc/Views/_ViewImports.cshtml
+++ b/MyPlaylistMvc/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using MyPlaylistMvc
 @using MyPlaylistMvc.Models
-@using MyPlaylistMvc.ViewModels
+@using Domain.DTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
