updated search result view

--- a/MyPlaylistMvc/Views/Home/Search.cshtml
+++ b/MyPlaylistMvc/Views/Home/Search.cshtml
@@ -6,20 +6,30 @@
 
 <div class="container">
     <div class="row">
-        @foreach (var video in Model)
+        @if (Model.Any())
         {
-        <div class="col-4">
+            foreach (var video in Model)
+            {
+                <div class="col-4">
 
-            <div class="card" style="width: 18rem;">
-                <img src="@video.image" class="card-img-top" alt="thumbnail">
-                <div class="card-body">
-                    <h5 class="card-title">@video.title</h5>
-                    <p class="card-text">@video.Description</p>
+                    <div class="card" style="width: 18rem;">
+                        <img src="@video.image" class="card-img-top" alt="thumbnail">
+                        <div class="card-body">
+                            <h5 class="card-title">@video.title</h5>
+                            <p class="card-text">@video.Description</p>
+                        </div>
+                    </div>
+
+
                 </div>
+            }
+
+        }
+        else
+        {
+            <div class="col-12 text-center">
+                <h1 class="text-danger">No result found!</h1>
             </div>
-
-
-        </div>
         }
     </div>
 </div>
